--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.jumbotron {
+  background: #ADA996;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -26,6 +32,7 @@ code {
 .project-card-info {
   margin-top: 10px;
   min-height: 100px;
+
 }
 
 .project-card-title {
@@ -36,5 +43,6 @@ code {
 .project-card-sub-title {
   font-size: 16px;
   margin: 0px; 
-  width: 300;
+  width: 300px;
+  word-wrap: break-word;
 }
